// Autogenerated with StateSmith 0.19.0-alpha-1+050895fb5381e265cf7dd2f0082f3d610699de73.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

// Generated state machine
public partial class RunnerState
{
    public enum EventId
    {
        DO = 0, // The `do` event is special. State event handlers do not consume this event (ancestors all get it too) unless a transition occurs.
    }

    public const int EventIdCount = 1;

    public enum StateId
    {
        ROOT = 0,
        GET_NEW_TARGET = 1,
        IDLE = 2,
        MOVE_TO_TARGET = 3,
        PAUSED = 4,
    }

    public const int StateIdCount = 5;

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public RunnerState()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(IDLE)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `IDLE`.
                IDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {

        switch (this.stateId)
        {
            // STATE: RunnerState
            case StateId.ROOT:
                // state and ancestors have no handler for `do` event.
                break;

            // STATE: GET_NEW_TARGET
            case StateId.GET_NEW_TARGET:
                GET_NEW_TARGET_do();
                break;

            // STATE: IDLE
            case StateId.IDLE:
                IDLE_do();
                break;

            // STATE: MOVE_TO_TARGET
            case StateId.MOVE_TO_TARGET:
                MOVE_TO_TARGET_do();
                break;

            // STATE: PAUSED
            case StateId.PAUSED:
                PAUSED_do();
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.GET_NEW_TARGET: GET_NEW_TARGET_exit(); break;

                case StateId.IDLE: IDLE_exit(); break;

                case StateId.MOVE_TO_TARGET: MOVE_TO_TARGET_exit(); break;

                case StateId.PAUSED: PAUSED_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state GET_NEW_TARGET
    ////////////////////////////////////////////////////////////////////////////////

    private void GET_NEW_TARGET_enter()
    {
        this.stateId = StateId.GET_NEW_TARGET;

        // GET_NEW_TARGET behavior
        // uml: enter / { FindNewTarget(); }
        {
            // Step 1: execute action `FindNewTarget();`
            FindNewTarget();
        } // end of behavior for GET_NEW_TARGET

        // GET_NEW_TARGET behavior
        // uml: enter / { RotateToTarget(); }
        {
            // Step 1: execute action `RotateToTarget();`
            RotateToTarget();
        } // end of behavior for GET_NEW_TARGET
    }

    private void GET_NEW_TARGET_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void GET_NEW_TARGET_do()
    {
        // GET_NEW_TARGET behavior
        // uml: do TransitionTo(MOVE_TO_TARGET)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            GET_NEW_TARGET_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `MOVE_TO_TARGET`.
            MOVE_TO_TARGET_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for GET_NEW_TARGET

        // unreachable behavior: `do [PauseMove] TransitionTo(PAUSED)` due to unconditional transition above

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state IDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void IDLE_enter()
    {
        this.stateId = StateId.IDLE;

        // IDLE behavior
        // uml: enter / { UpdateAnimation("idle"); }
        {
            // Step 1: execute action `UpdateAnimation("idle");`
            UpdateAnimation("idle");
        } // end of behavior for IDLE
    }

    private void IDLE_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void IDLE_do()
    {
        // IDLE behavior
        // uml: do [StartMove] TransitionTo(GET_NEW_TARGET)
        if (StartMove)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            IDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `GET_NEW_TARGET`.
            GET_NEW_TARGET_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for IDLE

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state MOVE_TO_TARGET
    ////////////////////////////////////////////////////////////////////////////////

    private void MOVE_TO_TARGET_enter()
    {
        this.stateId = StateId.MOVE_TO_TARGET;

        // MOVE_TO_TARGET behavior
        // uml: enter / { UpdateAnimation("running"); }
        {
            // Step 1: execute action `UpdateAnimation("running");`
            UpdateAnimation("running");
        } // end of behavior for MOVE_TO_TARGET
    }

    private void MOVE_TO_TARGET_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void MOVE_TO_TARGET_do()
    {
        // MOVE_TO_TARGET behavior
        // uml: do / { MoveTowardTarget(); }
        {
            // Step 1: execute action `MoveTowardTarget();`
            MoveTowardTarget();
        } // end of behavior for MOVE_TO_TARGET

        // MOVE_TO_TARGET behavior
        // uml: do [IsTargetReached] TransitionTo(GET_NEW_TARGET)
        if (IsTargetReached)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            MOVE_TO_TARGET_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `GET_NEW_TARGET`.
            GET_NEW_TARGET_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for MOVE_TO_TARGET

        // MOVE_TO_TARGET behavior
        // uml: do [PauseMove] TransitionTo(PAUSED)
        if (PauseMove)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            MOVE_TO_TARGET_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `PAUSED`.
            PAUSED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for MOVE_TO_TARGET

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state PAUSED
    ////////////////////////////////////////////////////////////////////////////////

    private void PAUSED_enter()
    {
        this.stateId = StateId.PAUSED;

        // PAUSED behavior
        // uml: enter / { PauseMove = true; }
        {
            // Step 1: execute action `PauseMove = true;`
            PauseMove = true;
        } // end of behavior for PAUSED
    }

    private void PAUSED_exit()
    {
        // PAUSED behavior
        // uml: exit / { ResumeMove = true; }
        {
            // Step 1: execute action `ResumeMove = true;`
            ResumeMove = true;
        } // end of behavior for PAUSED

        this.stateId = StateId.ROOT;
    }

    private void PAUSED_do()
    {
        // PAUSED behavior
        // uml: do [ResumeMove] TransitionTo(MOVE_TO_TARGET)
        if (ResumeMove)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            PAUSED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `MOVE_TO_TARGET`.
            MOVE_TO_TARGET_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for PAUSED

        // No ancestor handles this event.
    }

    // Thread safe.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.GET_NEW_TARGET: return "GET_NEW_TARGET";
            case StateId.IDLE: return "IDLE";
            case StateId.MOVE_TO_TARGET: return "MOVE_TO_TARGET";
            case StateId.PAUSED: return "PAUSED";
            default: return "?";
        }
    }

    // Thread safe.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.DO: return "DO";
            default: return "?";
        }
    }
}
